@@ -1018,6 +1018,7 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/NewEPrint:action:create:description">Begin a new deposit.</epp:phrase>
 	
 	<epp:phrase id="Plugin/Screen/EPrint:deposit">Deposit</epp:phrase>
+    	<epp:phrase id="Plugin/Screen/EPrint:owner_denied">Although you are the owner of this item you may not view this screen: <epc:pin name="screen"/>. This may be because you have deposited the item and you may no longer make changes to it.</epp:phrase>
 
 	<epp:phrase id="Plugin/Screen/FirstTool:no_tools">Sorry, you are not able to use any tools</epp:phrase>
 
