@@ -65,6 +65,15 @@ sub register_furniture
 	return $self->{session}->make_doc_fragment;
 }
 
+sub register_error
+{
+	my( $self ) = @_;
+
+	$self->{processor}->add_message( "error", $self->{session}->html_phrase( 
+		"Plugin/Screen:screen_not_allowed",
+		screen=>$self->{session}->make_text( $self->{processor}->{screenid} ) ) );
+}
+
 sub render_hidden_bits
 {
 	my( $self ) = @_;
